Project

General

Profile

Actions

Bug #24280

closed

rgw: fail to recover index from crash

Added by Tianshan Qu almost 6 years ago. Updated over 5 years ago.

Status:
Resolved
Priority:
Normal
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
jewel luminous mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The situation is a new PUT is crashed after write the head object and just miss the index complete op, rgw treat this PUT succeed, and rely on rgw_dir_suggest_changes in list op to complete the index, but the patch in https://github.com/ceph/ceph/pull/18709 make it skipped.
We need a new whole solution of stale pending op, or a temp fix to address the both problems.


Related issues 4 (0 open4 closed)

Related to rgw - Bug #24640: test_cls_rgw.sh cls_rgw.index_suggest fail with EINVALResolvedJ. Eric Ivancich06/23/2018

Actions
Copied to rgw - Backport #24627: jewel: rgw: fail to recover index from crashRejectedJ. Eric IvancichActions
Copied to rgw - Backport #24628: luminous: rgw: fail to recover index from crashResolvedJ. Eric IvancichActions
Copied to rgw - Backport #24629: mimic: rgw: fail to recover index from crashResolvedJ. Eric IvancichActions
Actions #2

Updated by Orit Wasserman almost 6 years ago

  • Status changed from New to Fix Under Review
  • Assignee set to J. Eric Ivancich
Actions #3

Updated by Casey Bodley almost 6 years ago

  • Status changed from Fix Under Review to Pending Backport
  • Backport set to jewel luminous mimic
Actions #4

Updated by Nathan Cutler almost 6 years ago

  • Copied to Backport #24627: jewel: rgw: fail to recover index from crash added
Actions #5

Updated by Nathan Cutler almost 6 years ago

  • Copied to Backport #24628: luminous: rgw: fail to recover index from crash added
Actions #6

Updated by Nathan Cutler almost 6 years ago

  • Copied to Backport #24629: mimic: rgw: fail to recover index from crash added
Actions #7

Updated by Sage Weil almost 6 years ago

  • Related to Bug #24640: test_cls_rgw.sh cls_rgw.index_suggest fail with EINVAL added
Actions #8

Updated by Nathan Cutler over 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF