rgw: fix index update in dir_suggest_changes

1.do nothing if the index is no longer exists in cls rgw_dir_suggest_changes,
whatever the pending state we got in check_disk_state, to avoid recreate
index when list race with delete. the situations:
* if dir_suggest_changes is done before complete op in Delete, the index
will be deleted finally.
* if dir_suggest_changes is done after complete op in Delete, the index
will no exists and do nothing.
2.stale pending write op's index is existent but exists field is false,
so remove cur_disk.exists check in op CEPH_RGW_UPDATE, make it recover the
situation again.

fixes: http://tracker.ceph.com/issues/24280

Signed-off-by: Tianshan Qu <tianshan@xsky.com>
(cherry picked from commit 8304c3e934d667fb89dbe0a79b252a5610b5eb62)

fixes: http://tracker.ceph.com/issues/24629